
A collection of PHP classes to manipulate bibtex files.

If you make improvements, please consider contacting the administrators at bibliophile.sourceforge.net so that your improvements can be added to the release package.

Mark Grimshaw 2004/2005/2006
http://bibliophile.sourceforge.net

################################################
v2.4
17/February/2019 - Michael Winkler
- Add support for newer PHP versions for PARSEMONTH and PARSEPAGE 

v2.3
14/August/2013 - Michael Winkler
- Add support for newer PHP versions for PARSEENTRIES and PARSECREATORS 

v2.2
24/April/2006 - Esteban Zimanyi and Mark Grimshaw
1/ A 4th array, $this->undefinedStrings, is now returned that holds field values that are judged to be undefined strings. i.e. they are a non-numeric value that is not defined in a @string{...} entry and not enclosed by braces or double-quotes. This array will be empty unless the following condition is met:
($this->removeDelimit || $this->expandMacro && $this->fieldExtract)
2/ When an undefined string is found in function removeDelimiters return the empty string. Return $this->undefinedStrings in the last position to allow compatibility with previous versions.
3/ Fix management of preamble in function returnArrays.

v2.1
7/February/2006 - Esteban Zimanyi and Mark Grimshaw
Minor debugging to catch more unusually formatted entries.


v2.0
3/February/2006 - Esteban Zimanyi and Mark Grimshaw
Substantial work on PARSEENTRES.php (mainly by Esteban) to:
1/  handle @strings concatenated from other @strings.
2/  handle all different types of comments possible.
3/  clean-up the code.
4/  handles more unusual formatting of white space between and inside entries.

v1.5.4
17/June/2005 - Mark Grimshaw
month fields that have multiple dates (e.g. dec # " 5--9," or nov # " 29" # "--" # dec # " 2") are correctly parsed. (list($startMonth, $startDay, $endMonth, $endDay) = $parseMonth->init($monthField);)

v1.5.3
10/June/2005 - Mark Grimshaw