@@ -12,8 +12,9 @@ http://bibliophile.sourceforge.net
 
 ################################################
 v2.4
-17/February/2019 - Michael Winkler
-- Add support for newer PHP versions for PARSEMONTH and PARSEPAGE 
+07/April/2019 - Michael Winkler
+- Add support for newer PHP versions for PARSEMONTH and PARSEPAGE
+- Fix array offset errors in PARSEENTRIES::get_line()
 
 v2.3
 14/August/2013 - Michael Winkler
